front-end/src/Styles/CustomerProducts.css
.bodyCustomerProducts {
  position: absolute;
  top: 50px;
}

.buttonVercarrinho {
  background-color: rgb(173, 209, 140);
  float: left;
  font-size: 11px;
  height: 20px;
  left: 800px;
  position: fixed;
  top: 400px;
  width: 130px;
}

